name:                NetCloser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wuerges/NetCloser#readme
license:             BSD3
license-file:        LICENSE
author:              Emilio Wuerges
maintainer:          wuerges@gmail.com
copyright:           BSD
category:            random stuff
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    , Geometry
                    , Shapes
                    , Parser
                    , DrawShapes
  build-depends:       base >= 4.7 && < 5
                    , attoparsec >= 0.13 && < 0.14
                    , bytestring
                    , Rasterific >= 0.7 && < 0.8
                    , JuicyPixels >= 3.2 && < 3.3
                    , containers >= 0.5 && < 0.6
  default-language:    Haskell2010

executable PrintProblemPng-exe
  hs-source-dirs:      app
  main-is:             PrintProblemPng.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , NetCloser
                    , attoparsec >= 0.13 && < 0.14
                    , bytestring
  default-language:    Haskell2010

executable NetCloser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , NetCloser
  default-language:    Haskell2010

test-suite NetCloser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , NetCloser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wuerges/NetCloser
